# ETBSaveManager

./: LICENSE  README-CN.md  README.md  function.py  logger_setup.py  main.py
src/: main.py
src-rust/: Cargo.toml  pyproject.toml
src-rust/src/: lib.rs
src/Chinese/: main.py
src/Chinese/Resources/Other/: ann.txt
src/English/: main.py
src/English/Resources/Other/: ann.txt
