[package]
name = "ETBSM_V2_Function_Rust"
version = "2.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ETBSM_V2_Function_Rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
walkdir = "2.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0.0"
uesave = "0.6.2"
chrono = "0.4"
serde_repr = "0.1.8"